--- a/Views/Supervisor/SupervisorPage.xaml
+++ b/Views/Supervisor/SupervisorPage.xaml
@@ -10,9 +10,8 @@
     mc:Ignorable="d">
 
     <Page.Resources>
-        <!-- TODO: Delete this line if the key AppName is declared in App.xaml -->
         <viewModels:SupervisorViewModel x:Key="ViewModel" />
-        <x:String x:Key="AppName">My Application</x:String>
+        <x:String x:Key="AppName">Manufacturing WinApp</x:String>
     </Page.Resources>
 
     <!--
